--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -175,6 +175,260 @@
                   </li>
                 </ul>
               </li>
+              <li>
+                <h3 class="subheading">February 2019</h3>
+                <ul class="menu-list">
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Monterey Chicken.JPG"
+                      alt="Monterey Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Monterey Chicken</h4>
+                      <p>
+                        Chicken breasts topped with a sweet and tangy homemade
+                        BBQ sauce, cheddar and bacon. Comes with veggies. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Brown Sugar Bourbon Chicken.JPG"
+                      alt="Brown Sugar Bourbon Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Brown Sugar Bourbon Chicken</h4>
+                      <p>
+                        A great meal for a busy night. Baked chicken is topped
+                        with a sweet sauce and served with rice and veggies.
+                        (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Creole Chicken and Sausage.JPG"
+                      alt="Creole Chicken and Sausage"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Creole Chicken and Sausage</h4>
+                      <p>
+                        Celebrate Mardi Gras in Iowa! A Cajun inspired dish
+                        filled with veggies, chicken and sausage. Served over
+                        rice. (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Mozzarella Stuffed Turkey Pesto Meatballs.JPG"
+                      alt="Mozzarella Stuffed Turkey Pesto Meatballs"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Mozzarella Stuffed Turkey Pesto Meatballs</h4>
+                      <p>
+                        Back by popular demand! Turkey pesto meatballs filled
+                        with mozzarella and baked to perfection. Served with
+                        Awesome bread and veggies. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Hot Italian Sandwiches.JPG"
+                      alt="Hot Italian Sandwiches"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Hot Italian Sandwiches</h4>
+                      <p>
+                        A great pizza inspired sandwich! A trio of meats and duo
+                        of cheeses are baked until melty good. Comes with
+                        veggies. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Bacon Cheddar Turnovers and Scrambled Eggs.JPG"
+                      alt="Bacon Cheddar Turnovers and Scrambled Eggs"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Bacon Cheddar Turnovers and Scrambled Eggs</h4>
+                      <p>
+                        Puff pastry is stuffed with bacon and cheddar then baked
+                        until golden brown. Serve it with veggie loaded
+                        scrambled eggs. The perfect breakfast for dinner choice!
+                        (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Beef Fajita Quesadillas.JPG"
+                      alt="Beef Fajita Quesadillas"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Beef Fajita Quesadillas</h4>
+                      <p>
+                        Our family lives on quesadillas. This is a great way to
+                        get some meat and veggies into a family favorite.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Beef and Noodles.JPG"
+                      alt="Beef and Noodles"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Beef and Noodles</h4>
+                      <p>
+                        Egg noodles are topped with beef that is slow cooked in
+                        a savory sauce. Perfect for a cold night! (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-02/web_Roasted Tomato Soup.JPG"
+                      alt="Roasted Tomato Soup"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Roasted Tomato Soup</h4>
+                      <p>
+                        My favorite tomato soup! Tomatoes, onions and garlic
+                        roasted until caramelized, then blended with a little
+                        cream for just the right creamy touch. You will need a
+                        blender, food processor, or immersion blender. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Italian Rice.JPG"
+                      alt="Italian Rice"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Italian Rice</h4>
+                      <p>
+                        Sautéed veggies and rice make for a delicious and quick
+                        dinner. (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Sweet and Savory Asian Pork Chops.JPG"
+                      alt="Sweet and Savory Asian Pork Chops"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Sweet and Savory Asian Pork Chops</h4>
+                      <p>
+                        Delicious sweet and savory pork chops served with
+                        veggies and rice. (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Italian Beef and Rice.JPG"
+                      alt="Italian Beef and Rice"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Italian Beef and Rice</h4>
+                      <p>
+                        A one dish wonder. Beef, rice, veggies, and cheese mixed
+                        together for a delicious meal! (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Roasted Cauliflower Burritos.JPG"
+                      alt="Roasted Cauliflower Burritos"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Roasted Cauliflower Burritos</h4>
+                      <p>
+                        Seasoned, roasted cauliflower and refried beans make a
+                        great burrito! (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Hearty Vegetable Lentil Soup.JPG"
+                      alt="Hearty Vegetable Lentil Soup"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Hearty Vegetable Lentil Soup</h4>
+                      <p>
+                        A great bowl of soup for a chilly winter night.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Roasted Gnocchi and Veggies.JPG"
+                      alt="Roasted Gnocchi and Veggies"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Roasted Gnocchi and Veggies</h4>
+                      <p>
+                        I love sheet pan meals. Delicious potato dumplings are
+                        roasted with veggies for a filling dinner. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-02/web_Vegan Jambalaya.JPG"
+                      alt="Vegan Jambalaya"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Vegan Jambalaya</h4>
+                      <p>
+                        Have dinner ready for your Mardi Gras celebration!
+                        Veggies, rice and Cajun seasonings make a great dinner.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
