--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,238 +14,196 @@
             <!-- Wrapper for slides -->
             <ul class="slides">
               <li>
-                <h3 class="subheading">March 2019</h3>
+                <h3 class="subheading">April 2019</h3>
                 <ul class="menu-list">
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Orange Chicken.JPG"
-                      alt="Orange Chicken"
+                      src="/Menu-Images/2019-04/web_Chicken Flautas.JPG"
+                      alt="Chicken Flautas"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Orange Chicken
-                      </h4>
+                      <h4>Chicken Flautas</h4>
                       <p>
-                        My favorite Chinese meal. Lightly breaded chicken tossed
-                        with an orange sauce and served with rice and veggies.
-                        (Stovetop)
+                        My favorite Mexican(ish) meal! Cheesy, seasoned chicken
+                        wrapped in flour tortillas and baked or fried. (Crockpot
+                        then baked or fried)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Ham and Broccoli Strata.JPG"
-                      alt="Ham and Broccoli Strata"
+                      src="/Menu-Images/2019-04/web_Cheesy Chicken and Rice.JPG"
+                      alt="Cheesy Chicken and Rice"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Ham and Broccoli Strata
-                      </h4>
+                      <h4>Cheesy Chicken and Rice</h4>
                       <p>
-                        Layers of flaky croissants, ham, broccoli and cheese.
-                        Once baked it is the perfect combination of gooey cheese
-                        and crispy croissants. Perfect for breakfast or
-                        breakfast for dinner! (Oven)
+                        Delicious chicken, veggie and rice dish. A one pot dish
+                        that covers all the bases! (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Hot Sausage Sandwiches.JPG"
-                      alt="Hot Sausage Sandwiches"
+                      src="/Menu-Images/2019-04/web_Lemon Turkey with Green Beans.JPG"
+                      alt="Lemon Turkey with Green Beans"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Hot Sausage Sandwiches
-                      </h4>
+                      <h4>Lemon Turkey with Green Beans</h4>
                       <p>
-                        My favorite sandwich growing up! Italian sausage is
-                        cooked with veggies and tomatoes. Spoon it on buns and
-                        top with mozzarella. Comes with veggies, buns and
-                        cheese. (Stovetop)
+                        Sliced turkey breast and green beans tossed with a
+                        citrus pan sauce. A great way to have turkey not at
+                        Thanksgiving. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Lomo Saltado.JPG"
-                      alt="Lomo Saltado"
+                      src="/Menu-Images/2019-04/web_Carnitas.JPG"
+                      alt="Carnitas"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Lomo Saltado
-                      </h4>
+                      <h4>Carnitas</h4>
                       <p>
-                        One of my favorite dishes from Peru! A delicious stir
-                        fry of beef, veggies, and potatoes. Served over rice.
-                        Can be made vegetarian. (Stovetop)
+                        Slow cooked deliciousness is the best way to describe
+                        thee amazing tacos. Pork is slow cooked all day then
+                        broiled or pan fried to get crispy edges. My favorite
+                        way to make tacos! (Slow cooker then oven or stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Cheeseburger Gnocchi.JPG"
-                      alt="Cheeseburger Gnocchi"
+                      src="/Menu-Images/2019-04/web_Creamy Tuscan Tortellini.JPG"
+                      alt="Creamy Tuscan Tortellini"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Cheeseburger Gnocchi
-                      </h4>
+                      <h4>Creamy Tuscan Tortellini</h4>
                       <p>
-                        Cheeseburger pasta with potato dumplings. The best parts
-                        of a burger and fries without the bun! (Stovetop)
+                        Sausage and tortellini in a creamy tomato sauce,
+                        finished with a handful of spinach. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Quinoa Enchilada Bowls.JPG"
-                      alt="Quinoa Enchilada Bowls"
+                      src="/Menu-Images/2019-04/web_Cuban Sandwiches.JPG"
+                      alt="Cuban Sandwiches"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Quinoa Enchilada Bowls
-                      </h4>
+                      <h4>Cuban Sandwiches</h4>
                       <p>
-                        Cheesy, veggie goodness in tasty enchilada sauce.
-                        Perfect for Meatless Monday or Taco Tuesday! (Slow
-                        Cooker)
+                        Back by popular demand! Pork is slow cooked with citrus
+                        and herbs all day. Add ham and Swiss and you have an
+                        amazing sandwich. (Slow cooker)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Roasted Veggies with Orzo.JPG"
-                      alt="Roasted Veggies with Orzo"
+                      src="/Menu-Images/2019-04/web_Sriracha and Cheddar Juicy Lucy.JPG"
+                      alt="Sriracha and Cheddar Juicy Lucy"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Roasted Veggies with Orzo
-                      </h4>
+                      <h4>Sriracha and Cheddar Juicy Lucy</h4>
                       <p>
-                        A great pasta salad. Eggplant, zucchini, tomatoes and
-                        more are roasted then mixed with orzo and a light
-                        vinaigrette. (Oven and stovetop)
+                        Cheddar stuffed burgers with a little (optional) kick.
+                        Comes with buns and veggies. (Grilled or stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-03/web_Bacon Wrapped Pork Chop.JPG"
-                      alt="Bacon Wrapped Pork Chops with Jalapeno Creamed Corn"
+                      src="/Menu-Images/2019-04/web_Italian Beef Sandwiches.JPG"
+                      alt="Italian Beef Sandwiches"
                       class="menu-image"
                     />
                     <div>
-                      <h4>
-                        Bacon Wrapped Pork Chops with Jalapeno Creamed Corn
-                      </h4>
+                      <h4>Italian Beef Sandwiches</h4>
                       <p>
-                        Juicy pork chops wrapped in crispy bacon and served with
-                        homemade creamed corn. It is the perfect Iowa farm meal!
-                        (Stovetop)
+                        My take on a Chicago favorite. Slow cooked beef is made
+                        into amazing sandwiches. Comes with rolls and veggies.
+                        (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-04/web_Sweet Potato and Chickpea Curry.JPG"
+                      alt="Sweet Potato and Chickpea Curry"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Sweet Potato and Chickpea Curry</h4>
+                      <p>
+                        An amazing vegetarian curry finished with fresh spinach
+                        and coconut milk. Comes with rice. (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-04/web_Baked Oatmeal.JPG"
+                      alt="Baked Oatmeal"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Baked Oatmeal</h4>
+                      <p>
+                        Oatmeal is mixed with blueberries and peaches then
+                        baked. One of my favorite quick and easy breakfasts. (Baked)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <!-- <img
-                      src="/Menu-Images/2019-03/web_Albondigas.JPG"
-                      alt="Albondigas"
+                      src="/Menu-Images/2019-04/web_Stir Fried Quinoa and Veggies.JPG"
+                      alt="Stir Fried Quinoa and Veggies"
                       class="menu-image"
                     /> -->
                     <div>
-                      <h4>
-                        Albondigas
-                      </h4>
+                      <h4>Stir Fried Quinoa and Veggies</h4>
                       <p>
-                        Soup delicious meatballs in a rich, veggie filled broth.
-                        (Stovetop or slow cooker)
+                        A new twist of fried rice. Quinoa is fried with veggies
+                        and eggs. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-03/web_Green Chile Chicken Pasta.JPG"
-                      alt="Green Chile Chicken Pasta"
+<!--                    <img
+                      src="/Menu-Images/2019-04/web_Ham and Cheese Pot Pie.JPG"
+                      alt="Ham and Cheese Pot Pie"
                       class="menu-image"
                     /> -->
                     <div>
-                      <h4>
-                        Green Chile Chicken Pasta
-                      </h4>
+                      <h4>Ham and Cheese Pot Pie</h4>
                       <p>
-                        A veggie filled one pot dish. We are combining some of
-                        my favorite flavors for a quick and easy family dinner.
-                        (Stovetop)
+                        Creamy ham and Swiss filling is topped puff pastry to
+                        create a quick and filling pot pie. (Stove top then
+                        baked)
                       </p>
                     </div>
                   </li>
 
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-03/web_Pineapple Sage Chicken.JPG"
-                      alt="Pineapple Sage Chicken"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Pineapple Sage Chicken
-                      </h4>
-                      <p>
-                        Juicy, citrus marinated chicken served with veggies.
-                        (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-03/web_Sweet Potato and Quinoa Soup.JPG"
-                      alt="Sweet Potato and Quinoa Soup"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Sweet Potato and Quinoa Soup
-                      </h4>
-                      <p>
-                        My take on my favorite soup from Peru. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-03/web_Taco Stuffed Peppers.JPG"
-                      alt="Taco Stuffed Peppers"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Taco Stuffed Peppers
-                      </h4>
-                      <p>
-                        Seasoned veggies stuff a pepper. A great way to have
-                        veggies and tacos all in one bite! (Oven)
-                      </p>
-                    </div>
-                  </li>
                 </ul>
               </li>
             </ul>
